[tool.poetry]
name = "make-dataset-peerring"
version = "0.1.0"
description = ""
authors = ["HirotaYasumasa <mi23a005@oecu.jp>"]
readme = "README.md"
packages = [{include = "make_dataset_peerring"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
